--- a/assest/cleanPage.html
+++ b/assest/cleanPage.html
@@ -62,7 +62,7 @@
   <section id="main">
 
     <h1 class="head-left">Learning C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
-    <h1 class="head-right">התוכנית הראשונה שלנו</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
+    <h1 class="head-right">כותרת</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
     <!-- אם אתה רוצה להכין פסקה לבד (בלי קוד) אז תשתמש בספרייה הבאה -->
     <div class="First-Para">
