--- a/functions.html
+++ b/functions.html
@@ -294,7 +294,9 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
         1. הצהרת הפונקציה צריכה להיות מעל פונקציית ה main.
         <br>
         הכוונה היא שאם אנחנו רוצים לרשום למשל פונקציה שמחשבת ממוצעים אז צריך להצהיר עליה לפני שהצהרנו על ה main שלנו ז"א
-        לרשום למשל <span dir="ltr">avg(int *arr , int sizeOfArr);</span>
+        לרשום למשל: 
+        <br>
+        <span dir="ltr">avg(int *arr , int sizeOfArr);</span>
         <br>
         ניתן לרשום את כל הקוד של הפונקציה לפני ה main, אבל השיטה שאנו נעבוד בה אומרת
         שאנחנו רק רושמים את ההצהרות של הפונקציה מעל ה main ואת כל הקוד למטה.
@@ -329,15 +331,15 @@ printf(<u>"amount of students with same grades as the avg is: %d\n"</u>, onTheAv
 
           <figcaption id="example1-caption">CODE 3:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
-      <b>int</b> avg(<b>int</b> *arr , <b>int</b> sizeOfArr); <em>// Before main function.</em>
-      <b>void</b> main()
-      {
-        <em>//code</em>
-      }
-      <b>int</b> avg(<b>int</b> *arr , <b>int</b> sizeOfArr)
-      {
-        <em>//code</em>
-      }
+<b>int</b> avg(<b>int</b> *arr , <b>int</b> sizeOfArr); <em>// Before main function.</em>
+<b>void</b> main()
+{
+  <em>//code</em>
+}
+<b>int</b> avg(<b>int</b> *arr , <b>int</b> sizeOfArr)
+{
+  <em>//code</em>
+}
             </code></pre>
         </figure>
 
