--- a/typeDef.html
+++ b/typeDef.html
@@ -78,8 +78,9 @@
        <br>
         הסינטקס של typedef & define:
         <br>
-        typedef unsigned int positive_only;
+        <span dir="ltr">typedef unsigned int positive_only;</span>
       </p>
+    
     </div>
 
     <div class="row">
