--- a/twoDimArrays.html
+++ b/twoDimArrays.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C HomePage</title>
+  <title>Lets learn C: twoDimArrays</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -34,7 +34,7 @@
     <a href="mathOperator.html">אופרטורים חשבוניים</a>
     <a href="statments.html">משפטי בקרה</a>
     <a href="oneDimLoops.html">לולאות</a>
-    <a href="twoDimLoops.html">לולאות דו מימדיות</a>
+    <a href="twoDimLoops.html">לולאות דו ממדיות</a>
     <a href="casting.html">casting </a>
     <a href="sizeOf.html">sizeof</a>
     <a href="typeDef.html">typedef</a>
@@ -46,7 +46,7 @@
     <a href="dinArrays.html">מערכים דינאמיים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
@@ -54,14 +54,14 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
 
-    <h1 class="top-left">Learning C</h1>
+    <h1 class="top-left">Lets learn C</h1>
 
-    <h2 class="top-right-head">מערך דו מימדי (מטריצה)</h2>
+    <h2 class="top-right-head">מערך דו ממדים (מטריצה)</h2>
 
     <p class="top-right">
 
       כמו שלמדו על "מערכים" ולאחר שהבנו לעומק את היעילות שבשימוש במערכים, אנו נראה שיש מבנה נתונים מתקדם יותר שנקרא מערך
-      דו מימדי.
+      דו ממדי.
       תפקידו של מבנה זה הוא לאחסן נתונים במעין טבלה.
       אל הטבלה ניגש בצורה הבאה:
       mat[x][y];
@@ -93,7 +93,7 @@
       <br>
 
       <br>
-      נניח שנרצה לחשב את הסכום כל ערכי המערך נוכל לעשות זאת באמצעות לולאה דו מימדית:
+      נניח שנרצה לחשב את הסכום כל ערכי המערך נוכל לעשות זאת באמצעות לולאה דו ממדית:
 
       <!--CODE
       int i,j,sum;
