--- a/twoDimLoops.html
+++ b/twoDimLoops.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C TwoDimLoops</title>
+  <title>Lets learn C: TwoDimLoops</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -36,7 +36,7 @@
     <a href="mathOperator.html">אופרטורים חשבוניים</a>
     <a href="statments.html">משפטי בקרה</a>
     <a href="oneDimLoops.html">לולאות</a>
-    <a href="twoDimLoops.html">לולאות דו מימדיות</a>
+    <a href="twoDimLoops.html">לולאות דו ממדיות</a>
     <a href="casting.html">casting </a>
     <a href="sizeOf.html">sizeof</a>
     <a href="typeDef.html">typedef</a>
@@ -48,7 +48,7 @@
     <a href="dinArrays.html">מערכים דינאמיים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
@@ -59,8 +59,8 @@
 
   <section id="main">
 
-    <h1 class="head-left">Learning C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
-    <h1 class="head-right">לולאות דו מימדיות</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
+    <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
+    <h1 class="head-right">לולאות דו ממדיות</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
     <div class="First-Para">
 
@@ -72,9 +72,9 @@
         ניתן לה).
         <br>
         קיימת הרחבה לנושא הלולאות והיא נפוצה מאוד בעולם התכנות.
-        לולאה דו מימדית הינה לולאה בעלת שני מימדים והיא מורכבת מלולאה שמריצה בתוכה לולאה אחרת.
-        אחת מהמטרות של לולאה דו מימדית הוא לעבור על מערך דו מימדי / לבצע מיון / לבצע חיפוש.
-        חשוב לציין שלולאה דו מימדית סטנדרטית רצה בסדר גודל של n^2 , כלומר היא תבצע n*n פעולות (כאשר n הוא הנתון הראשי).
+        לולאה דו ממדית הינה לולאה בעלת שני ממדים והיא מורכבת מלולאה שמריצה בתוכה לולאה אחרת.
+        אחת מהמטרות של לולאה דו ממדית הוא לעבור על מערך דו ממדי / לבצע מיון / לבצע חיפוש.
+        חשוב לציין שלולאה דו ממדית סטנדרטית רצה בסדר גודל של n^2 , כלומר היא תבצע n*n פעולות (כאשר n הוא הנתון הראשי).
         נניח שאנו רוצים להדפיס משולש שעשוי מכוכביות:
         <br>
       </p>
