--- a/casting.html
+++ b/casting.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C Casting</title>
+  <title>Lets learn C: casting</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -34,7 +34,7 @@
     <a href="mathOperator.html">אופרטורים חשבוניים</a>
     <a href="statments.html">משפטי בקרה</a>
     <a href="oneDimLoops.html">לולאות</a>
-    <a href="twoDimLoops.html">לולאות דו מימדיות</a>
+    <a href="twoDimLoops.html">לולאות דו ממדיות</a>
     <a href="casting.html">casting </a>
     <a href="sizeOf.html">sizeof</a>
     <a href="typeDef.html">typedef</a>
@@ -46,7 +46,7 @@
     <a href="dinArrays.html">מערכים דינאמיים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
@@ -56,7 +56,7 @@
 
   <section id="main">
 
-    <h1 class="head-left">Learning C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
+    <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
     <h1 class="head-right">התוכנית הראשונה שלנו</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
     <div class="First-Para">
