--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C HomePage</title>
+  <title>Lets learn C: homePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <!-- Font Awesome -->
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -35,7 +35,7 @@
     <a href="mathOperator.html">אופרטורים חשבוניים</a>
     <a href="statments.html">משפטי בקרה</a>
     <a href="oneDimLoops.html">לולאות</a>
-    <a href="twoDimLoops.html">לולאות דו מימדיות</a>
+    <a href="twoDimLoops.html">לולאות דו ממדיות</a>
     <a href="casting.html">casting </a>
     <a href="sizeOf.html">sizeof</a>
     <a href="typeDef.html">typedef</a>
@@ -47,18 +47,18 @@
     <a href="dinArrays.html">מערכים דינאמיים</a>
     <a href="string.html">מחרוזות</a>
     <a href="binSearch.html">חיפוש בינארי</a>
-    <a href="twoDimArrays.html">מערכים דו ממדיים</a>
+    <a href="twoDimArrays.html">מערכים דו ממדים</a>
     <a href="bubbleSort.html">מיון בועות</a>
     <a href="selectionSort.html">מיון בחירה</a>
     <a href="insertionSort.html">מיון הכנסה</a>
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <h1 class="head-left">Learning C</h1>
+  <h1 class="head-left">Lets learn C</h1>
   <h1 class="head-right">מי אנחנו?</h1>
 
   <div class="First-Para">
-    <p>היי, ברוכים הבאים לאתר שלנו Learning C.
+    <p>היי, ברוכים הבאים לאתר שלנו Lets learn C.
       <br>
       אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
       <br>
